--- a/Wordbook.xcodeproj/xcshareddata/xcschemes/ShareToWordbook.xcscheme
+++ b/Wordbook.xcodeproj/xcshareddata/xcschemes/ShareToWordbook.xcscheme
@@ -57,8 +57,12 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "com.apple.mobilesafari"
+         RemotePath = "/var/containers/Bundle/Application/BC304A50-A53F-4D9C-AA73-7F1C5B2E2F93/MobileSafari.app">
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8C93DC712C63B84D00B60239"
@@ -66,7 +70,7 @@
             BlueprintName = "Wordbook"
             ReferencedContainer = "container:Wordbook.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
